Format project files with Prettier
